tests/snapshots/test_AnyNA__fix_output.snap
---
source: tests/test-AnyNA.rs
expression: fix_output
---
  OLD:
  ====
any(is.na(x))
  NEW:
  ====
anyNA(x)

  OLD:
  ====
any(is.na(foo(x)))
  NEW:
  ====
anyNA(foo(x))

  OLD:
  ====
any(is.na(x), na.rm = TRUE)
  NEW:
  ====
anyNA(x)
