tests/snapshots/test_AnyNA__lint_output.snap
---
source: tests/test-AnyNA.rs
expression: lint_output
---
  OLD:
  ====
any(is.na(x))
  NEW:
  ====
/tmp/test-[...] [1:1] any-na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.


  OLD:
  ====
any(is.na(foo(x)))
  NEW:
  ====
/tmp/test-[...] [1:1] any-na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.


  OLD:
  ====
any(is.na(x), na.rm = TRUE)
  NEW:
  ====
/tmp/test-[...] [1:1] any-na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
